--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "3d-portfolio-website",
+  "name": "my-portfolio",
   "version": "0.1.1",
-  "homepage": "https://rishavchanda.github.io",
+  "homepage": "https://mohammed-ambar-portfolio.vercel.app",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
